k8s/appointment-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointment-service
  labels:
    app: appointment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointment-service
  template:
    metadata:
      labels:
        app: appointment-service
    spec:
      containers:
        - name: appointment-service
          image: gabsiuuu/caas-healthcare-appointment:latest
          ports:
            - containerPort: 4002
---
apiVersion: v1
kind: Service
metadata:
  name: appointment-service
spec:
  selector:
    app: appointment-service
  ports:
    - port: 4002
      targetPort: 4002
