k8s/caas-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: caas-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: caas.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 4000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
